<resources>
    <string name="app_name">t1000_ceva</string>
    <string name="attendant">Attendant</string>
    <string name="supervisor">Supervisor</string>
    <string name="deposit">Deposit</string>
    <string name="transfer">Transfer</string>
    <string name="airtime">Airtime</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="withdraw">Withdraw</string>
    <string name="next">Next</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="amount">Amount</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="purchase_airtime">Purchase Airtime</string>
    <string name="purchase">Purchase</string>
    <string name="pin">Pin</string>
    <string name="select_operator">Select Operator</string>

    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="card_withdrawal">Card Withdrawal</string>

    <string name="destination_type">Destination Type</string>
    <string name="enter_attendant_pin">Enter Attendant Pin</string>
    <string name="enter_deposit_amount">Enter Deposit Amount</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="enter_withdrawal_amount">Enter Withdrawal amount</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="account_number">Account Number</string>
    <string name="enter_pin">Enter pin</string>


</resources>